force-app/main/default/objects/Financial_Reporting_Rule__c/Financial_Reporting_Rule__c.object-meta.xml
<CustomObject>
    <label>Financial Reporting Rule</label>
    <nameField>
        <label>Financial Reporting Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Reporting Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>