force-app/main/default/objects/Financial_Reporting_Rule__c/fields/Hard_Validation__c.field-meta.xml
<CustomField>
    <fullName>Hard_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please tick if this rule can not be exempted by Provider.</inlineHelpText>
    <label>Hard Validation ?</label>
    <type>Checkbox</type>
</CustomField>