force-app/main/default/objects/Financial_Reporting_Rule__c/fields/Search_Category__c.field-meta.xml
<CustomField>
    <fullName>Search_Category__c</fullName>
    <label>Search Category</label>
    <length>10</length>
    <type>Text</type>
</CustomField>